// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SettingItemMin should match snapshot 1`] = `
<div
  className="section-min"
  onClick={[Function]}
>
  <div
    className="d-flex"
  >
    <h4
      className="section-min__title"
      id="sectionTitle"
    >
      title
    </h4>
    <div
      className="section-min__edit"
    >
      <button
        aria-labelledby="sectionTitle sectionEdit"
        className="color--link cursor--pointer style--none text-left"
        id="sectionEdit"
        onClick={[Function]}
      >
        <EditIcon />
        <FormattedMessage
          defaultMessage="Edit"
          id="setting_item_min.edit"
        />
      </button>
    </div>
  </div>
  <div
    className="section-min__describe"
    id="sectionDesc"
  >
    describe
  </div>
</div>
`;

exports[`components/SettingItemMin should match snapshot, on disableOpen to true 1`] = `
<div
  className="section-min"
  onClick={[Function]}
>
  <div
    className="d-flex"
  >
    <h4
      className="section-min__title"
      id="sectionTitle"
    >
      title
    </h4>
  </div>
</div>
`;
